# cerberus_anymal_locomotion

./: .gitmodules  README.md
.github/: CODEOWNERS
cerberus_anymal_b_control_1/: CMakeLists.txt  package.xml
cerberus_anymal_b_control_1/config/: ros.yaml
cerberus_anymal_b_control_1/include/cerberus_anymal_b_control_1/: CerberusAnymalBControl1.hpp
cerberus_anymal_b_control_1/launch/: cerberus_anymal_controller.launch
cerberus_anymal_b_control_1/src/: cerberus_anymal_b_control_1.cpp
cerberus_anymal_b_control_1/src/cerberus_anymal_b_control_1/: CerberusAnymalBControl1.cpp
cerberus_anymal_c_control_1/: CMakeLists.txt  package.xml
cerberus_anymal_c_control_1/include/cerberus_anymal_c_control_1/: CerberusAnymalCControl1.hpp
cerberus_anymal_c_control_1/include/cerberus_anymal_c_control_1/controller/: cpgController_j.hpp
cerberus_anymal_c_control_1/launch/: cerberus_anymal_controller.launch
cerberus_anymal_c_control_1/src/: cerberus_anymal_c_control_1.cpp
cerberus_anymal_c_control_1/src/cerberus_anymal_c_control_1/: CerberusAnymalCControl1.cpp
cerberus_anymal_control/: CMakeLists.txt  package.xml
cerberus_anymal_control/config/200205/: graph.pb
cerberus_anymal_control/include/cerberus_anymal_control/: CerberusAnymalControl.hpp
cerberus_anymal_control/include/cerberus_anymal_control/controllers/: cpgController_200205.hpp
cerberus_anymal_control/include/cerberus_anymal_control/utils/: GraphLoader.hpp
cerberus_anymal_control/launch/: cerberus_anymal_controller.launch
cerberus_anymal_control/src/: CerberusAnymalControl.cpp
cerberus_anymal_control_1/: CMakeLists.txt  package.xml
cerberus_anymal_control_1/config/: ros.yaml
cerberus_anymal_control_1/include/cerberus_anymal_b_control_1/: CerberusAnymalBControl1.hpp
cerberus_anymal_control_1/include/cerberus_anymal_control_1/: CerberusAnymalControl1.hpp
cerberus_anymal_control_1/include/cerberus_anymal_control_1/controller/: cpgController_200205.hpp
cerberus_anymal_control_1/launch/: cerberus_anymal_controller.launch
cerberus_anymal_control_1/src/: cerberus_anymal_control_1.cpp
cerberus_anymal_control_1/src/cerberus_anymal_b_control_1/: CerberusAnymalBControl1.cpp
cerberus_anymal_control_1/src/cerberus_anymal_control_1/: CerberusAnymalControl1.cpp
cerberus_anymal_control_common/cerberus_anymal_control_base/: CMakeLists.txt  package.xml
cerberus_anymal_control_common/cerberus_anymal_control_base/include/cerberus_anymal_control_base/: CerberusAnymalControlBase.hpp  CerberusAnymalControlBase.tpp  CerberusAnymalControlBaseRos.hpp  CerberusAnymalControlBaseRos.tpp
cerberus_anymal_control_common/cerberus_anymal_control_ros/: CMakeLists.txt  package.xml
cerberus_anymal_control_common/cerberus_anymal_control_ros/include/cerberus_anymal_control_ros/: CerberusAnymalControlRos.hpp
cerberus_anymal_control_common/cerberus_anymal_control_ros/src/: CerberusAnymalControlRos.cpp
cerberus_anymal_control_common/cerberus_anymal_utils/: CMakeLists.txt  package.xml
cerberus_anymal_control_common/cerberus_anymal_utils/include/cerberus_anymal_utils/: IK.hpp  SimpleMLPLayer.hpp
