<?xml version="1.0"?>

<package format="2">

  <name>cerberus_anymal_control</name>
  <version>0.1.0</version>
  <description>Minimal version of deep learning controller for DARPA SubT virtual challenge.</description>

  <license>Proprietary</license>

  <author email="timonh@ethz.ch">Timon Homberger</author>
  <maintainer email="timonh@ethz.ch">Timon Homberger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>catkin_simple</depend>
  <depend>geometry_msgs</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>tensorflow</depend>
  <depend>tf</depend>

</package>
